# learning_with_ai

./: README.md
chatgpt_note/: 20230408.md  README.md
hello_rust/: .gitignore  Cargo.toml
hello_rust/src/: main.rs  routes.rs
